--- a/src/components/Search/styles.css
+++ b/src/components/Search/styles.css
@@ -3,6 +3,7 @@ form {
     justify-content: flex-start;
     align-items: center;
     padding-left: 20px;
+    margin-top: 50px;
 }
 
 input {
@@ -16,7 +17,7 @@ input {
 }
 
 button {
-    padding: 10px 20px;
+    padding: 10px 15px;
     border: none;
     border-radius: 5px;
     background-color: #777;
