--- a/src/components/DetallePelicula/styles.css
+++ b/src/components/DetallePelicula/styles.css
@@ -1,22 +1,68 @@
-body {
-    font-family: Nunito;
-    margin: 0;
-}
-
-.detalle-titulo {
-    font-size: 50px;
-    padding-left: 50px;
-}
-
-.detalle-foto {
-    padding-left: 50px;
-
-}
-
-li {
-    list-style-type: none;
-}
-
-a {
-    text-decoration: none;
-}
+.detalle-pelicula {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #252525;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    color: #777;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .detalle-pelicula-header {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    margin-bottom: 20px;
+  }
+  
+  .detalle-pelicula img {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    border-radius: 10px;
+    margin-right: 20px;
+  }
+  
+  .detalle-pelicula-info {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .detalle-pelicula h1 {
+    font-size: 2.5em;
+    margin-bottom: 20px;
+    color: #fff;
+  }
+  
+  .detalle-pelicula p {
+    font-size: 1.2em;
+    line-height: 1.6;
+    color: #777;
+    margin: 10px 0;
+  }
+  
+  .detalle-pelicula-sinopsis {
+    font-size: 1.2em;
+    line-height: 1.6;
+    color: #777;
+    margin: 20px 0;
+  }
+  
+  .detalle-pelicula button {
+    padding: 10px 20px;
+    font-size: 1em;
+    color: #fff;
+    background-color: #e50914;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    margin-top: 20px;
+  }
+  
+  .detalle-pelicula button:hover {
+    background-color: #b20710;
+  }
+  
+  
