--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,3 +29,18 @@ h3 {
     font-weight: 400;
     padding-left: 50px;
 }
+
+.flex-center {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.cargar-mas-button {
+    background-color: #777;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin: 30px 0px;
+}
