--- a/src/components/HomeSection/styles.css
+++ b/src/components/HomeSection/styles.css
@@ -16,3 +16,10 @@
     padding: 10px 20px;
     font-size: 30px;
 }
+
+@media (max-width: 768px) {
+    .h3-section {
+        margin: 10px;
+        padding: 5px 0px 5px 10px;
+    }
+}
