--- a/src/components/DetallePelicula/styles.css
+++ b/src/components/DetallePelicula/styles.css
@@ -1,100 +1,101 @@
 .detalle-pelicula {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #252525;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    color: #777;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .detalle-pelicula-header {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    margin-bottom: 20px;
-  }
-  
-  .detalle-pelicula img {
-    width: 100%;
-    max-width: 300px;
-    height: auto;
-    border-radius: 10px;
-    margin-right: 20px;
-  }
-  
-  .detalle-pelicula-info {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .detalle-pelicula h1 {
-    font-size: 2.5em;
-    margin-bottom: 20px;
-    color: #fff;
-  }
-  
-  .detalle-pelicula p {
-    font-size: 1.2em;
-    line-height: 1.6;
-    color: #777;
-    margin: 10px 0;
-  }
-  
-  .detalle-pelicula-sinopsis {
-    font-size: 1.2em;
-    line-height: 1.6;
-    color: #777;
-    margin: 20px 0;
-  }
-  
-  .favorite-icon {
-    cursor: pointer;
-    font-size: 24px;
-    color: red; 
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #252525;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  color: #777;
+  display: flex;
+  flex-direction: column;
+}
+
+.detalle-pelicula-header {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  margin-bottom: 20px;
+}
+
+.detalle-pelicula img {
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+  border-radius: 10px;
+  margin-right: 20px;
+}
+
+.detalle-pelicula-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.detalle-pelicula h1 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  color: #fff;
+}
+
+.detalle-pelicula p {
+  font-size: 1.2em;
+  line-height: 1.6;
+  color: #777;
+  margin: 10px 0;
+}
+
+.detalle-pelicula-sinopsis {
+  font-size: 1.2em;
+  line-height: 1.6;
+  color: #777;
+  margin: 20px 0;
+}
+
+.favorite-icon {
+  cursor: pointer;
+  font-size: 24px;
+  color: red;
 }
 
 @media (max-width: 768px) {
   .detalle-pelicula {
-      padding: 15px;
+    padding: 15px;
   }
 
   .detalle-pelicula-header {
-      flex-direction: column;
-      align-items: center;
+    flex-direction: column;
+    align-items: center;
   }
 
   .detalle-pelicula img {
-      margin-right: 0;
-      margin-bottom: 20px;
+    margin-right: 0;
+    margin-bottom: 20px;
   }
 
   .detalle-pelicula h1 {
-      font-size: 2em;
+    font-size: 2em;
   }
 
-  .detalle-pelicula p, .detalle-pelicula-sinopsis {
-      font-size: 1em;
+  .detalle-pelicula p,
+  .detalle-pelicula-sinopsis {
+    font-size: 1em;
   }
 }
 
 @media (max-width: 480px) {
   .detalle-pelicula {
-      padding: 10px;
+    padding: 10px;
   }
 
   .detalle-pelicula h1 {
-      font-size: 1.5em;
+    font-size: 1.5em;
   }
 
-  .detalle-pelicula p, .detalle-pelicula-sinopsis {
-      font-size: 0.9em;
+  .detalle-pelicula p,
+  .detalle-pelicula-sinopsis {
+    font-size: 0.9em;
   }
 
   .favorite-icon {
-      font-size: 20px;
+    font-size: 20px;
   }
 }
-  
