--- a/src/components/Search/styles.css
+++ b/src/components/Search/styles.css
@@ -25,3 +25,9 @@ button {
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
+
+@media (max-width: 768px) {
+    form {
+        margin-top: 20px;
+    }
+}
